2009-04-04  Jean Delvare  <khali@linux-fr.org>

	* Makefile: Clarify license.

2008-11-23  Jean Delvare  <khali@linux-fr.org>

	* biosdecode.c: Stop using the inline keyword. It causes more
	  portability issues than is worth given how little we care about
	  performance in this tool, and recent versions of gcc know when
	  to inline functions anyway.
	* version.h: Set version to 2.10.

2008-11-14  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Handle chassis information records of size 19
	  (DMI type 3).

2008-11-10  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Claim to support revision 32 of Intel AP-485
	  (CPUID). No relevant change since revision 31.
	* dmidecode.c: Update reference to AMD CPUID document.

2008-11-09  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Decode the CPUID of more Intel, VIA and AMD
	  processors (DMI type 4).
	* dmidecode.c: More CPUID exceptions based on the version string
	  (DMI type 4).
	* README: Drop reference to the Linux kernel.
	* README: Drop "model-specific issues" common problem entry, it is
	  no longer relevant.
	* README: Simplify "IA-64" common problem entry, most of the
	  issues are solved by now.

2008-11-08  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Add many processor types taken from the CIM Schema.
	* dmidecode.c: Drop all references to the DMTF Master MIF
	  document. This document hasn't been updated in years, so the
	  additions it may contain are no longer relevant.

2008-11-07  Jean Delvare  <khali@linux-fr.org>

	* dmidecode.c: Handle base board information records of size 9
	  (DMI type 2).
	* dmidecode.c: Don't display access time equivalent of memory
	  device speed (DMI type 17). The access time didn't add much
	  value, and rounding effects made it look bad at times.

2008-11-07  Jean Delvare  <khali@linux-fr.org>

	Update to support SMBIOS specification version 2.6, fourth round.

	* dmidecode.c: Initial support for additional information entries