@@ -1,3 +1,8 @@
+2009-04-30  Jean Delvare  <khali@linux-fr.org>
+
+	* dmidecode.c: Warn if decoding an SMBIOS implementation which is
+	  newer than what we support.
+
 2009-04-04  Jean Delvare  <khali@linux-fr.org>
 
 	* Makefile: Clarify license.
